@@ -1,3 +1,9 @@
+Wed Oct  7 13:44:55 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_sequence/sequence_ch.cpp:
+          Made single argument constructor explicit and small layout changes
+          to generated sequences
+
 Wed Oct  7 06:46:55 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * TAO_IDL/Makefile.am:
